--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/yamathe5/rimac-seguro-vehicular-api#readme",
   "dependencies": {
+    "heroku": "^7.60.2",
     "json-server": "^0.17.0"
   }
 }
